adicionando primeira versão do layout de perfil

--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -130,7 +130,7 @@
 /*----------//--------------CONFIGURAÇÕES do menu__right------------------//------------*/ 
 
 .menu__avatar{
-    max-width: 40px;
+    width: 3rem;
     height: auto;
     border-radius: 50%;
     cursor: pointer;
@@ -186,25 +186,9 @@
     background-color: #fefefe;
     margin: 5px auto; /* 15% from the top and centered */
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button */
-  .close {
-    /* Position it in the top right corner outside of the modal */
-    position: absolute;
-    right: 100px;
-    top: 58px;
-    color: #000;
-    font-size: 35px;
-    font-weight: bold;
-  }
-  
-  /* Close button on hover */
-  .close:hover,
-  .close:focus {
-    color: red;
-    cursor: pointer;
+    border-radius: 2rem;
+    width: 40rem;/*porcentagem da tela do modal*/
+    padding: 2rem;
   }
   
   /* Add Zoom Animation */
@@ -223,59 +207,35 @@
     to {transform: scale(1)}
   }
 
-  /* Set a style for all buttons */
-
-/*  button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-  }
-  */
-  /* Add a hover effect for buttons */
-  button:hover {
-    opacity: 0.8;
-  }
-  
-  /* Extra style for the cancel button (red) */
-  .cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
-  }
-
-.Button__alternative{
-    display: flex;
-}
-/*TERMINA*/
+  /*TERMINA*/
 
 /*----------//--------------FORMULARIO DE LOGIN------------------//------------*/
-.Form-layout__ContainerWrapper {
+.form__container {
     width: 100%;
     cursor: auto;
 }
-.Text__Heading {
-    color: #4A4A4A;
-    margin: 0px 0px 1.875rem;
-    font-size: 2.4rem;
-    font-weight: 100;
-    text-align: center;
-    display: block;
+
+.form__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.TextField__FieldWrapper {
-    display: flex;
+.text__heading {
+    margin-bottom: 1rem;
+    font-size: 2.8rem;
+    text-align: center;
+}
+
+.text__field {
     margin-bottom: 2rem;
-    justify-content: center;
-    border-radius: 0.3125rem;
-    border: 0.0625rem solid rgb(218, 220, 224);
+    border-radius: 1.3125rem;;
+    border: 0.0625rem solid #bbb;
     width: 100%;
     padding: 1.2rem;
 }
 
-.Button_ButtonWrapper {
+.button_login {
     width: 100%;
     cursor: pointer;
     padding: 1.2rem 0rem 1.2rem 0rem;
@@ -289,55 +249,29 @@
     color: white;
     border-style: none;
 }
-.Button_ButtonWrapper:hover {
+
+.button_login:hover {
     background-color:  rgb(47, 73, 223);
 }
 
-.Text__footerText {
-    color: #767676;
-    font-size: 1.2rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: baseline;
-    margin-top: 2rem;
+.alternative__options{
+  display: flex;
+  align-items: center;
+  margin: 1rem;
+}
+ /* Extra style for the cancel button (red) */
+ .cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+  cursor: pointer;
 }
 
-.SocialLogin_separator {
-    color: rgb(74, 74, 74);
-    text-align: center;
-    margin: 1.75rem 0px;
-    font-size: 1.6rem;
-    background: linear-gradient(rgb(218, 220, 224), rgb(218, 220, 224)) 0px 1.4rem / 1px 1px repeat-x;
+.text__forgot, .text__footer {
+  width: 100%;
+  font-size: 1.4rem;
 }
 
-.Text__Separator {
-    background: white;
-    display: inline;
-    padding: 0px 0.625rem;
-}
-
-.Button__Signup {
-    height: 3rem;
-    border-radius: 0.3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: max-content;
-    box-shadow: rgb(75 75 75 / 25%) 0px 0.0625rem 0.025rem 0px, rgb(75 75 75 / 15%) 0px 0.0625rem 0.1875rem 0px;
-    transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.4, 2) 0s;
-    margin-top: 3rem;
-    padding: 2.4rem;
-    cursor: pointer;
-}
-
-.Button__Signup:hover {
-    box-shadow: rgb(75 75 750 / 25%) 0px 0.1rem 0rem 0px, rgb(75 75 75 / 15%) 0px 0.1rem 0.1rem 0px;
-}
-
-.Button__Signup a {
-    text-decoration: none;
-    color: rgb(74, 74, 74);
-}
 /*TERMINA*/
 
 /*----------//--------------CONFIGURAÇÕES DO MENU-MOBILE------------------//------------*/ 
