--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,3 +26,11 @@ body {
 }
 
 
+.content {
+    min-height: 100vh;
+    max-width: 1366px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
