--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -10,6 +10,7 @@
             <div class="perfil__section__left">
                 <img class="user__photo" src="assets/male-user-shadow-svgrepo-com.svg" alt="">
                 <img class="change__photo" src="assets/camera-fotografica.svg" alt="">
+                <p>Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario </p>
             </div>
 
             <div class="perfil__section__right">
@@ -31,6 +32,11 @@
                     <label class="perfil__title" for="rp">Digite a nova a senha</label>
                     <input class="perfil__input" type="password" name="rp" id="rp" placeholder="Digite novamente a senha" minlength="5" maxlength="30" required> 
                     <input class="button_login" type="submit" value="Atualizar senha">
+                </div>
+
+                <div class="perfil__content">
+                    <label class="perfil__title" for="password">Deletar conta</label>
+                    <input class="button_login" type="submit" value="Deletar">
                 </div>
             </div>
         </div>
