--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,9 +28,8 @@ body {
 
 .content {
     min-height: 100vh;
-    max-width: 1366px;
     display: flex;
+    align-items: baseline;
     justify-content: center;
-    align-items: center;
-
+    
 }
