--- a/views/articlesEdit.ejs
+++ b/views/articlesEdit.ejs
@@ -10,19 +10,11 @@
         <div class="users__content">
 
             <div class="users__section__header">
-                <h1 class="title__header">Lista de usuários</h1>
+                <h1 class="title__header">Editar artigo</h1>
             </div>
 
             <div class="users__section__body">
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">foto</h2>
-                    </div>
-                    <div class="user__info">
-                        <img class="user__image" src="assets/male-user-shadow-svgrepo-com.svg" alt="">
-                    </div>
-                </div>
-
+                
                 <div class="user__block">
                     <div class="user__info">
                         <h2 class="user__title">Nome</h2>
