--- a/views/categoriesNew.ejs
+++ b/views/categoriesNew.ejs
@@ -5,25 +5,57 @@
     <%- include("partials/header.ejs") %>
 
     <main class="content">
-        <h1>Criar categoria</h1>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p><p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p><p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        
+
+
+        <div class="users__content">
+
+            <div class="users__section__header">
+                <h1 class="title__header">Criar nova categoria</h1>
+            </div>
+
+            <div class="users__section__body">
+                
+                <div class="user__block">
+                    <div class="user__info">
+                        <h2 class="user__title">Nome</h2>
+                    </div>
+                    <div class="user__info">
+                        <p>Fellippe Matheus</p>
+                    </div>
+                </div>
+
+                <div class="user__block">
+                    <div class="user__info">
+                        <h2 class="user__title">Email</h2>
+                    </div>
+                    <div class="user__info">
+                        <p>Fellippe.matheus@hotmail.com</p>
+                    </div>
+                </div>
+
+                <div class="user__block">
+                    <div class="user__info">
+                        <h2 class="user__title">Cargo</h2>
+                    </div>
+                    <div class="user__info">
+                        <p>Administrador</p>
+                    </div>
+                </div>
+
+                <div class="user__block">
+                    <div class="user__info">
+                        <h2 class="user__title">Opções</h2>
+                    </div>
+                    <div class="user__info">
+                        <button>Excluir</button>
+                        <button>Editar</button>
+                    </div>
+                </div>
+                
+
+            </div>
+
+        </div>
         
     </main>
     
