organizando ejs corretamente de algumas paginas

--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -1,12 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include("partials/head.ejs") %>
+
+
 <body>
-    PAGINA DE ESQUECI SENHA
+   
+    <main class="content">
+        <div class="form__container">
+
+            <div class="form__header">
+                <h1 class="text__heading">Esqueceu senha? digite seu email</h2>
+            </div>
+                    
+            <form class="form__login" action="/signup" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
+                <input class="text__field" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
+                <input class="button_login" type="submit" value="Enviar email">
+            </form>
+
+            <div class="alternative__options" style="background-color:#f1f1f1">
+                <h2 class="text__footer">Lembrou?<a href="/user/login">Entre</a></h3>
+            </div>
+        </div>
+    </main>
+   
+
+    <%- include("partials/footer.ejs") %>
+
 </body>
+
 </html>
