--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,8 +3,8 @@
         <div class="menu__section"><!--Falta alinhar os links-->
             <div class="menu__section__left">
                 <ul>
-                    <li><img  class="menu__icon" src="assets/burger-icon.svg" alt="Burger" onclick="myFunction()"></li>
-                    <li><img class="menu__logo" src="assets/logo.bmp" alt=""></li>
+                    <li><img  class="menu__icon" src="/assets/burger-icon.svg" alt="Burger" onclick="myFunction()"></li>
+                    <li><img class="menu__logo" src="/assets/logo.bmp" alt=""></li>
                 
                     <!--menu grande de teste-->
                     <div class="dropdown">
@@ -51,8 +51,8 @@
             <div class="menu__section__right">
                 <ul>
                     <li><form class="menu__search" action="/action_page.php"><input class="menu__input" type="text" placeholder="Pesquisar.." name="search"></form></li>
-                    <li><img onclick="openSearch()" class="menu__button__search" src="assets/lupa.svg" alt=""></li>
-                    <li><img onclick="myFunction2()" class="menu__avatar" src="assets/male-user-shadow-svgrepo-com.svg" alt="Avatar picture"></li>
+                    <li><img onclick="openSearch()" class="menu__button__search" src="/assets/lupa.svg" alt=""></li>
+                    <li><img onclick="myFunction2()" class="menu__avatar" src="/assets/male-user-shadow-svgrepo-com.svg" alt="Avatar picture"></li>
                 </ul>
             </div>
         </div>
@@ -135,7 +135,7 @@
     <!--modal de pesquisa mobile-->
     <div id="myOverlay" class="search__content__mobile">
         <div class="search__content__button">
-            <img onclick="closeSearch()" src="assets/seta-esquerda.svg" alt="">
+            <img onclick="closeSearch()" src="/assets/seta-esquerda.svg" alt="">
         </div>
         <div class="search__content__input">
           <form class="search__form" action="action_page.php">
@@ -143,7 +143,7 @@
           </form>
         </div>
       </div>
-        <script src="js/script.js"></script>
+        <script src="/js/script.js"></script>
     </header>
 
     
