--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -1,12 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include("partials/head.ejs") %>
+
+
 <body>
-    PAGINA DE RESETAR PASSWORD
+   
+    <main class="content">
+        <div class="form__container">
+
+            <div class="form__header">
+                <h1 class="text__heading">Redefina sua nova senha</h2>
+            </div>
+                    
+            <form class="form__login" action="/signup" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
+                <input class="text__field" type="password" name="pw" id="pw" placeholder="Nova senha" minlength="5" maxlength="150" required>
+                <input class="text__field" type="password" name="pw-c" id="pw-c" placeholder="Confirme senha" minlength="5" maxlength="150" required>
+                <input class="button_login" type="submit" value="Redefinir senha">
+            </form>
+
+            <div class="alternative__options" style="background-color:#f1f1f1">
+                <h2 class="text__footer">Não quer mais?<a href="/user/login">Faça login normalmente</a></h3>
+            </div>
+        </div>
+    </main>
+   
+
+    <%- include("partials/footer.ejs") %>
+
 </body>
+
 </html>
