--- a/public/css/users.css
+++ b/public/css/users.css
@@ -1,67 +1,120 @@
-.users__content {
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=PT+Sans&display=swap');
+
+:root{
+    --dark: #2b2d42;
+    --light: #adb5bd;
+    --border: #dee2e6;
+    --border-btn: #edf2f4;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    font-family: 'PT Sans', sans-serif;
+}
+
+.container{
+    max-width: 1024px;
+    margin: auto;
+}
+
+
+
+.d-flex{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 95%;
-    max-width: 1366px;
+    flex-wrap: wrap;
 }
 
-.users__section__header {
-    max-width: 1366px;
+.justify-between{
+    justify-content: space-between;
 }
 
-.title__header {
+
+
+.border-shadow{
+    border: 1px solid var(--border-btn);
+    box-shadow: 1px 3px 10px #e9ecef;
+}
+
+
+
+.text-gradient{
+    background: linear-gradient(to right, #8e2de2, #4a00e0);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+
+#site-main{
+    margin-top: 6em;
+    font-family: 'Barlow', sans-serif;
+}
+
+#site-main .container .box-nav > a{
+    font-size: 1em;
+    padding: .5em 1em;
+}
+
+#site-main .container form{
+    margin: 2em 0;
+}
+
+table{
+    border-spacing: 0px;
+    width: 100%;
+}
+
+.table td, .table th{
+    padding: .75em;
+    vertical-align: top;
     text-align: center;
+    border-top: 1px solid var(--border);
 }
 
-.users__section__body{
-    display: flex;
-    flex-direction: column;
-    max-width: 1366px;
-    align-items: center;
-    border: 1px solid black;
-    margin-bottom: 2rem;
-
+.table td > a.btn{
+    padding: .3em 1em;
+    font-size: 1.1em;
+    margin: 0 .2em;
 }
 
-.user__block {
-    display: flex;
-    align-items: center;
-
+.table tr:hover{
+    background-color:#06d6a0 ;
 }
 
-.user__info {
-
+.table tr:hover td > a{
+    box-shadow: none;
 }
 
-.user__title {
-    font-size: 2rem;
-    display: none;
+.table .thead-dark th{
+    color: #fff;
+    background-color: var(--dark) ;
+    border-color: #32383e;
 }
 
-.user__image {
-    width: 10rem;
-}
-
-
-
-
-
-
-@media (min-width: 763px) {
-    .users__section__body{
-        flex-direction: row;
-        align-items: normal;
-        border: none;
-        justify-content: center;
-    }
-
-    .user__block {
-        flex-direction: column;
-        border: 1px solid black;
-
-    }
-    .user__title {
+@media only screen and (max-width: 1024px){
+    table, thead, tbody, th, td, tr{
         display: block;
     }
+
+    thead tr{
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+
+    tr { border: 1px solid var(--border);}
+
+    td{
+        border: none;
+        position: relative;
+    }
+
 }
+
