--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include("partials/head.ejs") %>
+
 <body>
-    PAGINA REGISTER
+    <main class="content">
+        <div class="form__container">
+
+            <div class="form__header">
+                <h1 class="text__heading">Cadastrar</h2>
+            </div>
+                    
+            <form class="form__login" action="/user/register" method="POST"><!--content__field__text//content__button__submit//content__footer__text-->
+                <% if (message) { %>
+                    <h2><%= message %> </h2>
+                <% } %>
+                <input class="text__field" type="text" name="name" id="name" placeholder="Nome e sobrenome" minlength="5" maxlength="150" required>
+                <input class="text__field" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
+                <input class="text__field" type="password" name="password" id="password" placeholder="Senha" minlength="5" maxlength="30" required> 
+                <input class="text__field" type="password" name="passwordConfirm" id="passwordConfirm" placeholder="Repita Senha" minlength="5" maxlength="30" required> 
+                <input class="button_login" type="submit" value="Cadastrar">
+            </form> 
+
+            <div class="alternative__options" style="background-color:#f1f1f1">
+                <h2 class="text__footer">Já tem?<a href="/user/login">Faça login</a></h3>
+            </div>
+        </div>
+    </main>
+
+    <%- include("partials/footer.ejs") %>
+
 </body>
 </html>
