organizando modelo da pagina inicial

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,26 +5,89 @@
     <%- include("partials/header.ejs") %>
 
     <main class="content">
-        <h1>Titulo para teste</h1>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p><p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p><p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
-        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
+    
+        <!--Principal-->
+    <div class="wrapper">
+        <!--Itens-->
+        <!--vai ter um for each e pra cada "block" um titulo, foto, descrição-->
+                    <div class="block">
+                        <div class="block-img">
+                            <img src="/assets/img-test/copos-coloridos.jpg" alt="HTML5">
+                        </div>
+                        <div class="block-desc">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        </div>
+                        <div class="block-link">
+                            <a href="#">Ver mais</a>
+                        </div>
+                    </div>
         
+                    <div class="block">
+                        <div class="block-img">
+                            <img src="/assets/img-test/eletricidade1.jpg" alt="CSS3">
+                        </div>
+                        <div class="block-desc">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit, iusto nihil ex tenetur temporibus aliquid.
+                        </div>
+                        <div class="block-link">
+                            <a href="#">Ver mais</a>
+                        </div>
+                    </div>
         
+                    <div class="block">
+                        <div class="block-img">
+                            <img src="/assets/img-test/leitecolorido.jpg" alt="jQuery">
+                        </div>
+                        <div class="block-desc">
+                            Lorem ipsum dolor sit amet, consectetur.
+                        </div>
+                        <div class="block-link">
+                            <a href="#">Ver mais</a>
+                        </div>
+                    </div>
+        
+                    <div class="block">
+                        <div class="block-img">
+                            <img src="/assets/img-test/material-experimento-moedas.jpg" alt="Apache">
+                        </div>
+                        <div class="block-desc">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit, iusto nihil ex tenetur temporibus aliquid dolores debitis esse
+                            possimus dolorem harum accusantium magnam tempora, ab, assumenda doloribus nam alias?
+                        </div>
+                        <div class="block-link">
+                            <a href="#">Ver mais</a>
+                        </div>
+                    </div>
+        
+                    <div class="block">
+                        <div class="block-img">
+                            <img src="/assets/img-test/quimica1.png" alt="Unity 3D">
+                        </div>
+                        <div class="block-desc">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit, iusto nihil ex tenetur.
+                        </div>
+                        <div class="block-link">
+                            <a href="#">Ver mais</a>
+                        </div>
+                    </div>
+                     
+                    <div class="block">
+                        <div class="block-img">
+                            <img src="/assets/img-test/vela1.jpg" alt="Xamarin">
+                        </div>
+                        <div class="block-desc">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit, iusto nihil ex tenetur temporibus aliquid dolores debitis esse
+                            possimus dolorem harum accusantium.
+                        </div>
+                        <div class="block-link">
+                            <a href="#">Ver mais</a>
+                        </div>
+                    </div>
+
+                    
+        <!--Termina Itens-->
+    </div>
+       
     </main>
     
 
