--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,5 +8,6 @@
     <link rel="stylesheet" href="/css/profile.css">
     <link rel="stylesheet" href="/css/partials/header.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>main</title>
 </head>
