--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -128,7 +128,10 @@
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks-2">
             <a href="#news">Perfil</a>
-            <a onclick="document.getElementById('id01').style.display='block'"  href="#about">Entrar/Sair</a>
+            <form action="/user/logout" method="get">
+                <input type="submit" value="sair">
+            </form>
+            <a onclick="document.getElementById('id01').style.display='block'"  href="/logout">Sair</a>
         </div>
     </div>
 
