adicionando modulos de articles

--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -10,7 +10,7 @@
         <div class="users__content">
 
             <div class="users__section__header">
-                <h1 class="title__header">Pagina de um usuários</h1>
+                <h1 class="title__header">Pagina de um artigo</h1>
             </div>
 
             <div class="users__section__body">
@@ -25,7 +25,16 @@
 
                 <div class="user__block">
                     <div class="user__info">
-                        <h2 class="user__title">Descrição</h2>
+                        <h2 class="user__title">Audio descrição</h2>
+                    </div>
+                    <div class="user__info">
+                        <audio src="" type="mp3"></audio>
+                    </div>
+                </div>
+
+                <div class="user__block">
+                    <div class="user__info">
+                        <h2 class="user__title">materiais</h2>
                     </div>
                     <div class="user__info">
                         <p>Fellippe Matheus</p>
@@ -34,7 +43,7 @@
 
                 <div class="user__block">
                     <div class="user__info">
-                        <h2 class="user__title">Nome</h2>
+                        <h2 class="user__title">passo a passo</h2>
                     </div>
                     <div class="user__info">
                         <p>Fellippe Matheus</p>
@@ -43,7 +52,16 @@
 
                 <div class="user__block">
                     <div class="user__info">
-                        <h2 class="user__title">Cargo</h2>
+                        <h2 class="user__title">video</h2>
+                    </div>
+                    <div class="user__info">
+                        <p>Administrador</p>
+                    </div>
+                </div>
+
+                <div class="user__block">
+                    <div class="user__info">
+                        <h2 class="user__title">Fotos</h2>
                     </div>
                     <div class="user__info">
                         <p>Administrador</p>
