adicionando funcionalidade de upload de arquivos

--- a/views/myProfile.ejs
+++ b/views/myProfile.ejs
@@ -12,6 +12,11 @@
                 <img class="user__photo" src="assets/male-user-shadow-svgrepo-com.svg" alt="">
                 <img class="change__photo" src="assets/camera-fotografica.svg" alt="">
                 <p>Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario </p>
+                <form action="/files" enctype="multipart/form-data" method="post">
+                    <input type="file"  name="file">
+                  <input type="submit" value="enviar arquivo" >            
+              </form>
+              
             </div>
 
             <div class="perfil__section__right">
