terminando funcionalidade de enviar imagem de perfil

--- a/views/myProfile.ejs
+++ b/views/myProfile.ejs
@@ -9,7 +9,7 @@
         
         <div class="perfil__section">
             <div class="perfil__section__left">
-                <img class="user__photo" src="assets/male-user-shadow-svgrepo-com.svg" alt="">
+                <img class="user__photo" src="files/<%= photo %>" alt="">
                 <img class="change__photo" src="assets/camera-fotografica.svg" alt="">
                 <p>Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario Descrição do usuario </p>
                 <form action="/files" enctype="multipart/form-data" method="post">
