--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,7 +20,7 @@
             </form> 
 
             <div class="alternative__options" style="background-color:#f1f1f1">
-                <h2 class="text__footer">Já tem?<a href="/user/login">Faça login</a></h3>
+                <h2 class="text__footer">Já tem?<a href="/login">Faça login</a></h3>
             </div>
         </div>
     </main>
