--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -132,9 +132,10 @@
                 <li><a href="/register">Register</a></li>
                 <li><a href="/login">Login</a></li>
 
-                <%}else{%>
-                    <li><a href="/logout">Logout</a></li>
-                <%}%>
+        <%}else{%>
+                <li><a href="/myprofile">Perfil</a></li>
+                <li><a href="/logout">Logout</a></li>
+        <%}%>
     </div>
 
     <!--modal de pesquisa mobile-->
